--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,14 @@
         android:hint="Кількість повторень"
         android:inputType="number" />
 
+    <TextView
+        android:id="@+id/textview_number_of_loop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="4dp"
+        android:text="Номер повторення:"/>
+
     <Button
         android:id="@+id/start_button"
         android:layout_width="match_parent"
